add decision parser and readonly contexts
Co-authored-by: yuzhongbo <1538937+yuzhongbo@users.noreply.github.com>